--- a/TheBloomingHome.API/appsettings.json
+++ b/TheBloomingHome.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:egxr41k.database.windows.net; Database=MainDB;User ID=egxr41k;Password=egor!2020;Encrypt=True;TrustServerCertificate=False"
+  }
 }
